<resources>
    <string name="app_name">TKF Ops</string>

    <string name="LoginText">Username</string>
    <string name="ForgotMobile">Enter your Registered Mobile No.</string>
    <string name="PassText">Enter Password</string>
    <string name="FullName">Enter Full Name</string>
    <string name="Email">Enter Email</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="payment">Payment</string>
    <string name="myaccount">My Account</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="legal">Legal</string>
    <string name="Advance_Order">Advance Order</string>
    <string name="myOrders">My Orders</string>

    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="groceries">Groceries</string>

    <string name="tomatoDesc">Tracking Fresh ensures that you get the right blend of nutrition and cost with these hybrid tomatoes. They are not like the conventional tomatoes which are restricted to seasons but these are found all year round. They have a firm and juicy texture and can perish at room temperature for longer periods.</string>
    <string name="related_Searches">leafy vegetables | root vegetable | green chili | raw garlic | white radish | watermelon fruit</string>
    <string name="disclaimer_text">The product images shown are for illustration purposes only and may not be an exact representation of the product.
    Tracking Fresh reserves the right to change product images and specifications at any time without notice.</string>

    <string name="Full_Name">Full Name</string>
    <string name="Email_id">Email ID</string>
    <string name="Mobile_no">Mobile No.</string>
    <string name="city">City</string>
    <string name="Address">Address</string>
    <string name="state">State</string>
    <string name="pin_code">Pin Code</string>

    <string name="pickupCheckbox">Pick Up (If Pick up is checked, above address is not applicable. User will come to Vehicle and buy the product.)</string>

    <string name="loading">Loading…</string>

    <string name="order_open">Show Order</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="order_assigned">Order Assigned</string>
    <string name="order_pending">Order Pending</string>
    <string name="order_rejected">Order Rejected</string>

    <string name="order_open1">Order Open</string>
    <string name="order_delivered1">Delivered</string>
    <string name="order_assigned1">Order Assigned</string>
    <string name="order_pending1">Pending</string>
    <string name="order_rejected1">Rejected</string>

    <string name="assigned_stock">Assigned Stocks</string>
    <string name="stocks">Stocks</string>
    <string name="stockAccepted">Accepted</string>
    <string name="stockRejected">Rejected</string>
    <string name="reject">Reject</string>

    <string name="googleMaps_ServerKey">AIzaSyDoJCSIjyCfQAO_F0NNaPXm_vPxrLhJWXM</string>

    <string-array name="spinFilter">
        <item>Pending</item>
        <item>Accepted</item>
        <item>Rejected</item>
        <item>Delivered</item>
    </string-array>

</resources>
