<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
        android:theme="@style/ToolbarStyle"
        android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
        android:background="@color/white" app:popupTheme="@style/AppTheme.PopupOverlay" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_alignParentLeft="true"
                android:src="@drawable/logo"
                />


        </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pending"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/order_pending1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ccc" />

        <TextView
            android:id="@+id/delivered"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/order_delivered1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ccc" />

        <TextView
            android:id="@+id/rejected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/order_rejected1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativelay_reclview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView"
            android:scrollbars="vertical"
            android:background="@color/white">
        </android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>
