<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kesari.tkfops.AssignedStock.AssignedStockActivity">

    <RelativeLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:theme="@style/ToolbarStyle"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/white"
            android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/logo"
                    />


            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:id="@+id/fragment_stock"
            android:layout_above="@+id/linearLayout"
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ccc" />

            <LinearLayout
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/stocks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/stocks"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#ccc" />

                <TextView
                    android:id="@+id/stocksAccepted"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/stockAccepted"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#ccc" />

                <TextView
                    android:id="@+id/stocksRejected"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/stockRejected"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
