<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:theme="@style/ToolbarStyle"
            android:background="@color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/white"
            android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/logo"
                    />

                <TextView
                    android:id="@+id/statVehicle"
                    android:layout_toLeftOf="@+id/vehicleStatus"
                    android:textSize="16sp"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Switch
                    android:id="@+id/vehicleStatus"
                    android:textColor="@color/black"
                    android:layout_centerInParent="true"
                    android:shadowColor="@color/Gray"
                    android:background="@color/Gray"
                    android:layout_marginLeft="10dp"
                    android:layout_toLeftOf="@+id/filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/filter"
                    android:layout_width="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_filter"
                    />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:id="@+id/fragment_holder"
            android:layout_above="@+id/linearLayout"
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Button_Color"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="Orders Section"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:weightSum="2"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/order_assign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/order_assigned"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#ccc" />

                <TextView
                    android:id="@+id/order_open"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/order_open"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <View
                    android:layout_width="1dp"
                    android:visibility="gone"
                    android:layout_height="match_parent"
                    android:background="#ccc" />

                <TextView
                    android:id="@+id/order_delivered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/order_delivered"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_navigation" />
    <!--app:headerLayout="@layout/nav_header_navigation"-->

</android.support.v4.widget.DrawerLayout>
